summative.moria.Moria.scala.error
Erreur de compilation :
Moria:-5: error: Unmatched closing brace '}' ignored here
	}
        ^Moria:-4: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Moria:0: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^