summative.moria.Moria.scala.code

 retourne()
 while (getCouleurSol() != Color.GREEN) {
    if (!porteBiscuit()) {
      	if (estSurBiscuit()) {
          	prendBiscuit()
          	retourne()
        }
      	else
      			deplace()
    }
    else {
      	if (estSurBiscuit()) {
          	recule()
          	poseBiscuit()
          	retourne()
        }
    }
    
  }
}

def deplace() {
  if (estFaceMur()) {
    	droite()
    	avance()
    	gauche()
    	avance()
  }
  else
    	avance()
  
}